--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,19 @@
     <string name="open">Open</string>
     <string name="close">Close</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_home">HomeActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_profile2">ProfileActivity2</string>
+    <string name="title_activity_second">SecondActivity</string>
+    <string name="Home">Home</string>
+    <string name="Profile">Profile</string>
+    <string name="second">second</string>
+    <string name="HHome">HHome</string>
+
 </resources>
